@@ -1,3 +1,7 @@
+2011-03-21 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/log.c: Comparing a va_list with NULL is bogus. It's supposed to be treated like
+      an opaque type and only be manipulated with va_* accessors. This fixes #587.
+
 2011-03-12  Stipe Tolj  <stolj at kannel.org>
     * gw/smsc/smsc_http.c: reverting back last commit due to veto if Alex. Need
       further investigation.
